# annual

./: .bacon-locations  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  rustc-ice-2024-11-30T01_03_48-306521.txt  rustc-ice-2024-11-30T01_03_48-306522.txt
.config/: cargo.toml
assets/: flower.png~  girl.png~
assets/ldtk/: 0.scn.ron  Bedroom.scn.ron  LivingRoom.scn.ron  Park.scn.ron  Sandbox.scn.ron  annual.ldtk
assets/ldtk/annual_scenes/: Park.scn.ron
assets/particles/: dust.ron  leaves.ron
assets/shaders/: post_processing.wgsl  text_effect.wgsl  wavy_text.wgsl
assets/shaders/text/: wave.wgsl
assets/sprites/: annual_pallete.aseprite  gold.aseprite  gold_pallete.aseprite  gold_spring.aseprite  ground.aseprite  izzy.aseprite  park.aseprite  park_trees.aseprite  path.aseprite  portraits.aseprite  textbox.aseprite
macros/: Cargo.toml
macros/src/: lib.rs
script/: intro.md  overview.md
seedling_voices/: Cargo.toml
seedling_voices/src/: lib.rs
seedling_voices/src/formants/: formants.rs  mod.rs
src/: animation.rs  annual.rs  asset_loading.rs  camera.rs  color.rs  curves.rs  cutscene.rs  dialogue.rs  dialogue_parser.rs  editor.rs  evaluate.rs  flower.rs  frag_util.rs  fragment.rs  interactions.rs  ldtk.rs  main.rs  player.rs  text.rs
src/audio/: formants.rs  mod.rs
src/characters/: mod.rs  player.rs  portrait.rs  sfx.rs
src/collision/: debug.rs  mod.rs  spatial.rs  trigger.rs
src/dialogue/: evaluate.rs  fragment.rs
src/dialogue/fragment/: all.rs  binding.rs  delay.rs  dynamic.rs  eval.rs  hooks.rs  leaf.rs  limit.rs  mapped.rs  primitives.rs  sequence.rs  string.rs  trigger.rs
src/dialogue_box/: audio.rs  box_atlas.rs  effect.rs  material.rs  mod.rs  old_text.rs  portrait.rs  text.rs  tokens.rs  type_writer.rs
src/fragment/: dynamic.rs  eval.rs  sequence.rs  string.rs  trigger.rs
src/gfx/: camera.rs  mod.rs  pixel_perfect.rs  post_processing.rs  zorder.rs
src/ldtk/: entities.rs  mod.rs
src/physics/: collision.rs  debug.rs  mod.rs  velocity.rs
src/scenes/: emitters.rs  home.rs  mod.rs  park.rs  point_light.rs  sandbox.rs
src/scenes/park/: fireflies.rs  mod.rs
src/textbox/: mod.rs  render_layer.rs
src/textbox/frags/: mod.rs  portrait.rs  sfx.rs
