[package]
name = "annual"
version = "0.1.0"
edition = "2021"

[dependencies]
# macros = { path = "macros" }
bevy_bits = { path = "bevy_bits" }
paste = "1.0.15"
rand = "0.8.5"
winnow = "0.6.20"
# leafwing-input-manager = "0.15.1"
bevy_asset_loader = "0.22.0"
bevy_ldtk_scene = { path = "bevy_ldtk_scene" }
bevy_sequence = { path = "bevy_sequence" }

[dependencies.bevy]
version = "0.15"
features = ["dynamic_linking", "wav", "mp3", "jpeg"]

[build-dependencies]
bevy_ldtk_scene = { path = "bevy_ldtk_scene" }


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."bevy_bits"]
opt-level = 0
