[package]
name = "annual"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "macros" }
paste = "1.0.15"
rand = "0.8.5"
winnow = "0.6.20"
bytemuck = "1.20.0"
leafwing-input-manager = "0.16"
bevy_asset_loader = "0.22.0"
bevy_ldtk_scene = { path = "bevy_ldtk_scene" }
bevy_sequence = { path = "bevy_sequence" }
bevy_pretty_text = { path = "bevy_pretty_text" }
bevy_light_2d = "0.5"
bevy_enoki = "0.3.3"
bevy_seedling = { path = "bevy_seedling", features = ["mp3", "ogg"] }

[dependencies.bevy]
version = "0.15"
features = ["dynamic_linking", "file_watcher", "jpeg"]

[build-dependencies]
bevy_ldtk_scene = { path = "bevy_ldtk_scene" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."bevy_sequence"]
opt-level = 0

[profile.dev.package."bevy_ldtk_scene"]
opt-level = 0

[profile.dev.package."bevy_pretty_text"]
opt-level = 0
